--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">School</string>
+    <string name="login_button_string"><i>Login</i></string>
+    <string name="username_string">Username here</string>
+    <string name="password_string">Password here</string>
 </resources>
